--- a/css/default.css
+++ b/css/default.css
@@ -584,13 +584,28 @@ footer a{
         align-items: center;
     }
 
-    footer .container{
+    .quick-links{
         display: flex;
-        padding: 1vw 8vw;
-        font-size: 0.8vw;
-        justify-content: space-between;
-        background-color: var(--color-secondary);
-        color: var(--font--color-secondary);
+        justify-content: space-around;
+        align-items: center;
+        width: 40vw;
+        height: 3.5vw;
+    }
+
+    .quick-links a{
+        display: flex;
+        width: fit-content;
+        align-items: center;
+        height: 100%;
+        width: 6vw;
+        border: 2px solid transparent;
+        justify-content: center;
+        font-size: 0.85vw;
+        color: var(--font--color-primary);
+    }
+
+    .quick-links a .fa-solid{
+        padding: 0.3vw 0.3vw 0.3vw 0;
     }
     
     .row{
