--- a/template/template.html
+++ b/template/template.html
@@ -77,8 +77,6 @@
         <a href="https://getprojects.tech/games"><div id="mobMenuIco"><i class="fa-solid fa-gamepad"></i></div>Games</a>
         <a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a>
         <a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a>
-        <a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a>
-        <a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a>
     </div>
 
 
@@ -94,6 +92,18 @@
             </div>
         </div>
 
+        <div class="container">
+            <div class="quick-links">
+                <a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a>
+                <a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a>
+                <a href="https://getprojects.tech/games"><div id="mobMenuIco"><i class="fa-solid fa-gamepad"></i></div>Games</a>
+                <a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a>
+                <a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a>
+                <a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a>
+                <a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a>
+            </div>
+        </div>
+
         <div class="row">
             <h2><i class="fa-regular fa-copyright"></i> 2022 Copyright: GetProjects.tech</h2>
         </div>
@@ -106,5 +116,7 @@
 
     <!-- scripts -->
     <script src="https://getprojects.tech/js/default.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </body>
 </html>
