--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 1vw;
+    width: 0.4vw;
 }
 
 ::-webkit-scrollbar-track {
@@ -23,6 +23,7 @@
 
 body{
     background-color: var(--bright);
+    overflow-x: hidden;
 }
 
 :root {
