--- a/template/template.html
+++ b/template/template.html
@@ -22,6 +22,9 @@
     <!-- style -->
     <link rel="preload" href="https://getprojects.tech/css/default.css" as="style">
     <link rel="stylesheet" href="https://getprojects.tech/css/default.css">
+    <link rel="preload" href="./css/default.css" as="style">
+    <link rel="stylesheet" href="./css/default.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -116,7 +119,7 @@
 
     <!-- scripts -->
     <script src="https://getprojects.tech/js/default.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
