--- a/template/template.html
+++ b/template/template.html
@@ -121,5 +121,8 @@
     <script src="https://getprojects.tech/js/default.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/script.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
