--- a/css/default.css
+++ b/css/default.css
@@ -33,7 +33,7 @@ body{
     --font-secondary: 'Outfit', sans-serif;
 }
 
-@media (prefers-color-scheme: dark){
+/* @media (prefers-color-scheme: dark){
     :root {
         --color-primary: #24272C;
         --bright: #131920;
@@ -52,7 +52,7 @@ body{
         color: var(--font--color-secondary);
         border: 2px solid var(--color-primary);
     }
-}
+} */
 
 @media (prefers-color-scheme: light){
     :root {
