--- a/css/default.css
+++ b/css/default.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
     border: none;
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
 }
 
 ::-webkit-scrollbar {
