--- a/css/default.css
+++ b/css/default.css
@@ -32,7 +32,7 @@ body{
     --font-secondary: 'Outfit', sans-serif;
 }
 
-@media (prefers-color-scheme: dark){
+/* @media (prefers-color-scheme: dark){
     :root {
         --color-primary: #24272C;
         --bright: #131920;
@@ -55,7 +55,7 @@ body{
         color: var(--font--color-secondary);
         border: 2px solid var(--color-primary);
     }
-}
+} */
 
     :root {
         --color-primary: #0072ff;
@@ -77,7 +77,6 @@ body{
         color: var(--font-btn-hover);
         border: 2px solid var(--color-primary);
     }
-
 
 .btn-primary{
     background-color: var(--color-primary);
