--- a/components/footer/index.html
+++ b/components/footer/index.html
@@ -16,6 +16,6 @@
         <button type="submit" class="btn-primary">Subscribe</button>
     </form>
 </div>
-<div data-aos="fade-up" class="footer-menu">
+<div class="footer-menu">
     <i class="fa-regular fa-copyright"></i>&nbsp;2022 Copyright: GetProjects.tech
 </div>
