--- a/template/index.html
+++ b/template/index.html
@@ -16,26 +16,26 @@
     <meta itemprop="url" content="https://getprojects.tech">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="/images/ico.svg" type="image/x-icon">
-    <link rel="apple-touch-icon" href="/images/ico.svg">
+    <link rel="shortcut icon" href="https://getprojects.tech/images/ico.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://getprojects.tech/images/ico.svg">
 
     <!-- style -->
-    <link rel="stylesheet" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/index.css" as="style">
+    <link rel="stylesheet" href="https://getprojects.tech/css/style.css" as="style">
+    <link rel="stylesheet" href="https://getprojects.tech/css/index.css" as="style">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Fira+Code:wght@300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="/assets/fontawesome/css/fontawesome.css" rel="stylesheet">
-    <link href="/assets/fontawesome/css/brands.css" rel="stylesheet">
-    <link href="/assets/fontawesome/css/solid.css" rel="stylesheet">
-    <link href="/assets/fontawesome/css/regular.css" rel="stylesheet">
+    <link href="https://getprojects.tech/assets/fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="https://getprojects.tech/assets/fontawesome/css/brands.css" rel="stylesheet">
+    <link href="https://getprojects.tech/assets/fontawesome/css/solid.css" rel="stylesheet">
+    <link href="https://getprojects.tech/assets/fontawesome/css/regular.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="/js/jquery-3.6.1.js"></script>
+    <script src="https://getprojects.tech/js/jquery-3.6.1.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>GetProjects</title>
-    <script src="/js/content.js"></script>
+    <script src="https://getprojects.tech/js/content.js"></script>
 </head>
 <body>
 
@@ -57,13 +57,13 @@
     </div>
 
     
-    <script src="/js/index.js"></script>
+    <script src="https://getprojects.tech/js/index.js"></script>
 
     <!-- loading animation script -->
     <!-- <script src="./js/lottie-player.js"></script> -->
 
     <!-- scripts -->
-    <script src="/js/ScrollTrigger.min.js"></script>
+    <script src="https://getprojects.tech/js/ScrollTrigger.min.js"></script>
     <script>
         AOS.init();
     </script>
