--- a/template/index.html
+++ b/template/index.html
@@ -21,7 +21,7 @@
 
     <!-- style -->
     <link rel="stylesheet" href="https://getprojects.tech/css/style.css" as="style">
-    <link rel="stylesheet" href="https://getprojects.tech/css/index.css" as="style">
+    <link rel="stylesheet" href="/css/style.css" as="style">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
