--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ a,a:visited,a:hover{
     color: unset;
 }
 
+h1 ,h2, h3, h4, h5, h6{
+    font-family: var(--font-heading);
+}
+
 .btn-primary{
     background-color: var(--blue-blue);
     color: var(--font--white-white);
@@ -106,10 +110,10 @@ a,a:visited,a:hover{
         --font-black-white: #dddddd;
         --font--white-white: #dddddd;
         --font--white-black: #000000;
-        --bd-white: rgb(255, 255, 255, 0.3);
-        --bd-off-white: rgb(239, 246, 255, 0.3);
-        --bd-off-black: rgb(19, 25, 32, 0.3);
-        --bd-black: rgb(18, 18, 18, 0.3);
+        --bd-white: rgb(255, 255, 255, 0.2);
+        --bd-off-white: rgb(239, 246, 255, 0.2);
+        --bd-off-black: rgb(19, 25, 32, 0.2);
+        --bd-black: rgb(18, 18, 18, 0.2);
         --gray: #F8F8F8;
         --red: #FD5056;
         --cyan: #42DAF5;
@@ -134,10 +138,10 @@ a,a:visited,a:hover{
         --font-black-white: #131920;
         --font--white-white: #ffffff;
         --font--white-black: #ffffff;
-        --bd-white: rgb(255, 255, 255, 0.3);
-        --bd-off-white: rgb(239, 246, 255, 0.3);
-        --bd-off-black: rgb(19, 25, 32, 0.3);
-        --bd-black: rgb(18, 18, 18, 0.3);
+        --bd-white: rgb(255, 255, 255, 0.2);
+        --bd-off-white: rgb(239, 246, 255, 0.2);
+        --bd-off-black: rgb(19, 25, 32, 0.2);
+        --bd-black: rgb(18, 18, 18, 0.2);
         --gray: #F8F8F8;
         --red: #FD5056;
         --cyan: #42DAF5;
@@ -260,6 +264,10 @@ a,a:visited,a:hover{
     width: 100vw;
     height: 100vh;
     background-color: var(--white-black);
+}
+
+#searchMob #searchbar{
+    display: flex;
 }
 
 .section.bd{
@@ -543,6 +551,10 @@ ul{
     text-align: center;
 }
 
+span.blue{
+    color: var(--blue-blue);
+}
+
 /* Tablet View */
 @media only screen and (min-width: 480px) and (max-width: 768px){
     #searchbar{
@@ -646,6 +658,20 @@ ul{
     }
 
     .section.bd{
-        backdrop-filter: blur(4vw);
+        backdrop-filter: blur(10vh);
     }
+
+    @keyframes round{
+        0%{
+          transform:rotate(0deg)
+                    translate(25%)
+                    rotate(0deg);
+        
+        }
+        100%{
+          transform:rotate(360deg)
+                    translate(25%)
+                    rotate(-360deg);
+        }
+      }
 }
