minor theme changes

--- a/components/navbar/index.html
+++ b/components/navbar/index.html
@@ -29,5 +29,5 @@
         <li><a href="https://getprojects.tech/help"><i class="fa-solid fa-circle-question"></i>Help</a></li>
         <li><a href="https://getprojects.tech/about"><i class="fa-solid fa-circle-info"></i>About</a></li>
     </ul>
-    <div onclick="share()" class="btn-primary share">Share&nbsp;&nbsp;<i class="fa-regular fa-copy"></i></div>
+    <a onclick="share()" class="btn-primary share">Share<i class="fa-regular fa-copy"></i></a>
 </div>
