--- a/css/index.css
+++ b/css/index.css
@@ -145,7 +145,7 @@
     }
 
     #hero .heading h3{
-        padding-bottom: 5vh;
+        padding-bottom: 5vw;
         font-size: 1.2vw;
         letter-spacing: 0;
         line-height: normal;
